<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.login.LoginFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <com.google.android.material.imageview.ShapeableImageView
           android:id="@+id/ivLogo"
           android:layout_width="180dp"
           android:layout_height="180dp"
           android:layout_marginTop="16dp"
           android:scaleType="centerCrop"
           android:src="@drawable/ic_logo"
           app:layout_constraintBottom_toTopOf="@id/tilEmail"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_chainStyle="packed"
           app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilEmail"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="16dp"
           android:layout_marginTop="32dp"
           android:hint="@string/login__email_hint"
           app:layout_constraintBottom_toTopOf="@id/tilPassword"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/ivLogo">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"/>
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilPassword"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="16dp"
           android:layout_marginTop="12dp"
           android:hint="@string/login__password_hint"
           app:passwordToggleEnabled="true"
           app:layout_constraintBottom_toTopOf="@id/bLogin"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/tilEmail">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"/>
       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/bPasswordRecovery"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginEnd="16dp"
           android:text="@string/login__password_recovery_header"
           android:textSize="12sp"
           android:textColor="@color/black"
           app:layout_constraintTop_toBottomOf="@id/tilPassword"
           app:layout_constraintBottom_toTopOf="@id/bLogin"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintHorizontal_bias="1"/>

       <Button
           android:id="@+id/bLogin"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="16dp"
           android:paddingVertical="14dp"
           android:text="@string/login__login_button"
           app:layout_constraintBottom_toTopOf="@id/bSignUp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/bPasswordRecovery" />

       <ProgressBar
           android:id="@+id/pbLogin"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="2dp"
           android:visibility="gone"
           app:layout_constraintTop_toTopOf="@id/bLogin"
           app:layout_constraintStart_toStartOf="@id/bLogin"
           app:layout_constraintEnd_toEndOf="@id/bLogin"
           app:layout_constraintBottom_toBottomOf="@id/bLogin"/>

       <Button
           android:id="@+id/bSignUp"
           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginBottom="40dp"
           android:layout_marginHorizontal="16dp"
           android:paddingVertical="14dp"
           android:text="@string/login__signup_button"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/bLogin" />
   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>